[gd_scene load_steps=3 format=2]

[ext_resource path="res://Items/Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Weapons/Weapon.gd" type="Script" id=2]

[node name="Weapon" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="FirePosition" type="Position2D" parent="Sprite" index="0"]

[node name="WaitTimer" type="Timer" parent="." index="1"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
